unpackaged/main/default/objects/QS_Customer_Asset__c/QS_Customer_Asset__c.object-meta.xml
<CustomObject>
    <description>A summarization of the customer&#39;s currently-owned products.</description>
    <label>Purchased Product</label>
    <nameField>
        <label>Customer Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchased Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>