unpackaged/main/default/objects/QS_Customer_Asset__c/fields/Demo_CheckBox_for_Line_Classification__c.field-meta.xml
<CustomField>
    <fullName>Demo_CheckBox_for_Line_Classification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo CheckBox for Line Classification</label>
    <type>Checkbox</type>
</CustomField>