unpackaged/main/default/objects/QS_Customer_Asset__c/fields/QS_Account__c.field-meta.xml
<CustomField>
    <fullName>QS_Account__c</fullName>
    <description>Indicates the account that is primarily associated with the customer asset. This is the account that purchased the product.</description>
    <inlineHelpText>Indicates the account that is primarily associated with the customer asset. This is the account that purchased the product.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>QS_Customer_Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>