unpackaged/main/default/objects/QS_Customer_Asset__c/fields/QS_Annual_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>QS_Annual_Recurring_Revenue__c</fullName>
    <description>Roll-up field which sums the annual recurring revenue for all CATs where today’s date is between the CATs Start Date and End Date. Currency amounts are converted to the default currency of the User and then rolled up onto the Asset.</description>
    <inlineHelpText>Roll-up field which sums the annual recurring revenue for all CATs where today’s date is between the CATs Start Date and End Date. Currency amounts are converted to the default currency of the User and then rolled up onto the Asset.</inlineHelpText>
    <label>Active Annual Recurring Revenue</label>
    <summarizedField>QS_Customer_Asset_Detail__c.QS_Annual_Recurring_Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>QS_Customer_Asset_Detail__c.QS_Currently_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QS_Customer_Asset_Detail__c.QS_Customer_Asset__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>