unpackaged/main/default/objects/QS_Customer_Asset__c/fields/QS_Customer_Asset_Name_Value__c.field-meta.xml
<CustomField>
    <fullName>QS_Customer_Asset_Name_Value__c</fullName>
    <description>Formula = QS_Product__r.Name. This field is used to stamp the product name as the customer asset name.</description>
    <formula>QS_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula = QS_Product__r.Name. This field is used to stamp the product name as the customer asset name.</inlineHelpText>
    <label>Customer Asset Name Value</label>
    <type>Text</type>
</CustomField>