unpackaged/main/default/objects/QS_Customer_Asset__c/fields/QS_Customer_Asset_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>QS_Customer_Asset_Unique_Id__c</fullName>
    <description>Unique key identifying this customer asset combination or Account and Product. The default criteria upon creation  is “Customer Asset Account ID + Product ID.” These fields are obtained from the SUbscription OR Asset Record</description>
    <inlineHelpText>Unique key identifying this customer asset combination or Account and Product. The default criteria upon creation  is “Customer Asset Account ID + Product ID.” These fields are obtained from the SUbscription OR Asset Record</inlineHelpText>
    <label>Customer Asset Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>