unpackaged/main/default/objects/QS_Customer_Asset__c/fields/QS_Dynamic_Current_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_Dynamic_Current_Date__c</fullName>
    <formula>IF(NOT ISBLANK( QS_Simulated_Current_Date__c), QS_Simulated_Current_Date__c, Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dynamic Current Date</label>
    <type>Date</type>
</CustomField>