unpackaged/main/default/objects/QS_Customer_Asset__c/fields/QS_Effective_Decommision_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_Effective_Decommision_Date__c</fullName>
    <description>Represents the date the customer cancels the product completely. Populated from the Terminated date on the Subscription (the start date of the last decommission executed (the CAT that results in the complete decommission).</description>
    <label>Effective Decommission Date</label>
    <type>Date</type>
</CustomField>