unpackaged/main/default/objects/QS_Customer_Asset__c/fields/QS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_End_Date__c</fullName>
    <description>Roll-up field displaying the latest end date amongst all the CATs. This field changes as products are added or renewed.</description>
    <inlineHelpText>Roll-up field displaying the latest end date amongst all the CATs. This field changes as products are added or renewed.</inlineHelpText>
    <label>End Date</label>
    <summarizedField>QS_Customer_Asset_Detail__c.QS_End_Date__c</summarizedField>
    <summaryForeignKey>QS_Customer_Asset_Detail__c.QS_Customer_Asset__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>