unpackaged/main/default/objects/QS_Customer_Asset__c/fields/QS_Product__c.field-meta.xml
<CustomField>
    <fullName>QS_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product this customer asset represents. Customer asset records are created when the product field Generate Customer Asset = true.</description>
    <inlineHelpText>The product this customer asset represents. Customer asset records are created when the product field Generate Customer Asset = true.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>QS_Customer_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>