unpackaged/main/default/objects/QS_Customer_Asset__c/fields/QS_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>QS_Product_Category__c</fullName>
    <description>Identifies whether the product is an Asset or a Subscription. Sourced by referencing the object the CAT record was created from--Subscription or Asset.</description>
    <inlineHelpText>Identifies whether the product is an Asset or a Subscription. Sourced by referencing the object the CAT record was created from--Subscription or Asset.</inlineHelpText>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>