unpackaged/main/default/objects/QS_Customer_Asset__c/fields/QS_Quantity__c.field-meta.xml
<CustomField>
    <fullName>QS_Quantity__c</fullName>
    <description>The total amount of the Product currently owned by this Account.</description>
    <inlineHelpText>The total amount of the Product currently owned by this Account.</inlineHelpText>
    <label>No. of Active Subscrictions</label>
    <summarizedField>QS_Customer_Asset_Detail__c.QS_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>QS_Customer_Asset_Detail__c.QS_Currently_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QS_Customer_Asset_Detail__c.QS_Maintain_Line__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>QS_Customer_Asset_Detail__c.QS_Customer_Asset__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>