unpackaged/main/default/objects/QS_Customer_Asset__c/fields/QS_Secondary_Account__c.field-meta.xml
<CustomField>
    <fullName>QS_Secondary_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Customer_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>