unpackaged/main/default/objects/QS_Customer_Asset__c/fields/QS_Simulated_Current_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_Simulated_Current_Date__c</fullName>
    <description>Contains the Simulated Current Date if populated. Otherwise, shows today.</description>
    <inlineHelpText>Contains the Simulated Current Date if populated. Otherwise, shows today.</inlineHelpText>
    <label>Simulated Current Date</label>
    <type>Date</type>
</CustomField>