unpackaged/main/default/objects/QS_Customer_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QS_Account__c</columns>
    <columns>QS_Quantity__c</columns>
    <columns>QS_Annual_Recurring_Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>